# mcmove

./: .gitignore  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  MIGRATION.md  README.md  install.ps1  mcmove.py  modpack_patch.go  pyproject.toml  requirements.txt
.github/workflows/: release.yml
crates/mcmove-cli/: Cargo.toml
crates/mcmove-cli/src/: color.rs  connect.rs  main.rs  pack.rs  playerdata.rs  report.rs  servers.rs  synccmd.rs  update.rs  util.rs  whois.rs  wizard.rs
crates/mcmove-core/: Cargo.toml
crates/mcmove-core/examples/: sftp_smoke.rs
crates/mcmove-core/src/: actions.rs  config.rs  lib.rs  modrinth.rs  mojang.rs  nbt.rs  pack.rs  progress.rs  sftp.rs  syncmods.rs
